Squashed commit of the following:
commit 336234bfc04b6e83b648ac24f67951ca61d28a94
Author: Stijn Klomp <stijnklomp1@hotmail.com>
Date:   Sun Jun 28 03:21:53 2026 +0100

    Github Action for deploying Docker image to 'latest' tag

commit 14ddf7a47181c50306388f8601fed4b4f37f4ef7
Author: Stijn Klomp <stijnklomp1@hotmail.com>
Date:   Sun Jun 28 02:52:24 2026 +0100

    Fix Dockerfile build

commit abfc32fef4e6ec88227e200cdd28221d1d315683
Author: Stijn Klomp <stijnklomp1@hotmail.com>
Date:   Sun Jun 28 02:10:01 2026 +0100

    Type check in linting command

commit 40d2a699412d31315dd94fd65a237586cf1d8e0f
Author: Stijn Klomp <stijnklomp1@hotmail.com>
Date:   Sat Jun 27 14:01:11 2026 +0100

    Account registration and permanent deletion unit testing

commit afa94d8e2d0a7cdb7e607c4d7c73d8a55b4f2986
Author: Stijn Klomp <stijnklomp1@hotmail.com>
Date:   Sat Jun 27 13:00:42 2026 +0100

    Support permanent deletion of account and user data

commit b861569af372de2fde6d203f053ed516dfbb2e48
Author: Stijn Klomp <stijnklomp1@hotmail.com>
Date:   Sat Jun 27 01:48:38 2026 +0100

    Add tests for the error validation

commit c47a4e455858067e4895d3e4ff0e1076f1d5d4c0
Author: Stijn Klomp <stijnklomp1@hotmail.com>
Date:   Sat Jun 27 01:26:35 2026 +0100

    Fragments and layer endpoints

commit 72e5c795e93d399db7c78359d05069ec3fb05108
Author: Stijn Klomp <stijnklomp1@hotmail.com>
Date:   Fri Jun 26 20:13:30 2026 +0100

    Migrations fix to not clash with existing tables
